# TrustLedger

./: .dockerignore  .env.example  .env.production  .gitignore  .npmrc  Dockerfile.api  Dockerfile.web  Dockerfile.whatsapp-bot  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
apps/api/: package.json  tsconfig.tsbuildinfo
apps/api/src/: index.ts  server.ts
apps/api/src/config/: env.ts  redis.ts
apps/api/src/middleware/: authenticate.ts  authorize-lender.ts  validate.ts
apps/api/src/plugins/: auth.ts  cors.ts  error-handler.ts  rate-limit.ts
apps/api/src/routes/: index.ts
apps/api/src/types/: fastify.d.ts
apps/score-engine/: Dockerfile  pyproject.toml  requirements.txt
apps/score-engine/app/: __init__.py  config.py  main.py
apps/score-engine/app/api/: dependencies.py  routes.py
apps/score-engine/app/models/: features.py  schemas.py
apps/score-engine/app/scoring/: __init__.py  engine.py
apps/score-engine/tests/: test_api.py  test_scoring.py
apps/web/: package.json
apps/whatsapp-bot/: package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/whatsapp-bot/src/: index.ts  server.ts
contracts/: check-balance.ts  hardhat.config.ts  package.json  tsconfig.json
contracts/contracts/: BehaviorToken.sol  ScoreVerifier.sol  TrustLedgerScore.sol
contracts/contracts/interfaces/: IBehaviorToken.sol  ITrustLedgerScore.sol
contracts/scripts/: deploy.ts
contracts/test/: BehaviorToken.test.ts  TrustLedgerScore.test.ts
contracts/test/helpers/: fixtures.ts
nginx/: nginx.conf
(+73 files in other folders)
