[project]
name = "trustledger-score-engine"
version = "0.1.0"
description = "TrustLedger ML Credit Scoring Microservice"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "xgboost>=2.1.0",
    "scikit-learn>=1.6.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "shap>=0.46.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
